# project_news_graph

./: .gitignore  .pre-commit-config.yaml  Data.dvc  LICENSE  README.md
.dvc/: config
.github/: service_bot.yml
.github/workflows/: pipeline.yml  service_bot.yml  services.yml
Data/: dataset_descriptiion.md  push_to_db.ipynb  scrapers_interfax.ipynb  scrapers_kommersant.ipynb  scrapers_ria.ipynb  scrapers_smart_lab.ipynb
Data/V.1/: dataset_descriptiion.md  push_to_db.ipynb  scrapers_interfax.ipynb  scrapers_kommersant.ipynb  scrapers_ria.ipynb
DataCollection/: df_unite.ipynb
EDA/: EDA.ipynb  EDA.md  EDA_dates_tags.ipynb  EDA_part_1.ipynb
Modeling/: .gitignore  NER.ipynb  artifacts.dvc  delta_experiments.ipynb  models_experiments_deep.ipynb  models_experiments_simple.ipynb  models_final.ipynb  models_simple.ipynb  trade_data_integration.ipynb  vocabs.dvc
Modeling/Experiments/: experiments_deltas.ipynb  models_experiments_simple.ipynb
Modeling/tokenizers/: glob_rubusd_tokenizer.json  glob_rvi_tokenizer.json  ind_tokenizer.json
Pipeline/: .gitignore  .isort.cfg  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
Pipeline/configs/model/: basic_model_config.yaml  basic_model_infer_config.yaml  basic_model_train_config.yaml
Pipeline/configs/preprocessing/: basic_preprocessing_config.yaml
Pipeline/configs/scrapers/: basic_scrapers_config.yaml
Pipeline/data_and_artifacts/artifacts/vocabs/: comp_vocab.pt
Pipeline/model/: infer.py  train.py
Pipeline/model/dataset/: __init__.py  dataset.py
Pipeline/model/model/: __init__.py  model.py
Pipeline/preprocessing/: __init__.py  my_utils.py  ner_and_clean_texts.py  preprocessing_main.py  soft_preprocessing.py  trade_data_injection.py  utils.py
Pipeline/scrapers/: interfax_scraper.py  kommersant_scraper.py  ria_scraper.py  scrapers_main.py  selenium_options.py  smart_lab_scraper.py
Research/: Data.dvc
Research/DataCollection/: dataset_descriptiion.md  scrapers_smart_lab.ipynb
Research/EDA/: EDA.ipynb  EDA.md
Research/Modeling/: .gitignore  artifacts.dvc  models_final.ipynb  trade_data_integration.ipynb  vocabs.dvc
Research/Modeling/Experiments/: bert_experiments.ipynb  graph_clusterization_experiments.ipynb  models_experiments_deep.ipynb
Scrapers/: kommersant_links.txt  scrapers_kommersant.ipynb  scrapers_max.ipynb  scrapers_serj.ipynb  smart_lab_links.txt
Service/: .env  Dockerfile  bot.py  config_reader.py  docker-compose.yml  env.sample  main.py  requirements.txt
Service-bot/: .pre-commit-config.yaml  Dockerfile  Makefile  main.py  pyproject.toml  setup.cfg
Service-bot/handlers/: bot_display_feedback.py  bot_display_ticker.py  bot_get_feedback.py  bot_graph.py  bot_info.py  bot_start.py
Service-bot/handlers/model/: bot_model_buttons.py  bot_model_main.py  scrapers.py
Service-bot/utils/: .gitignore  database.py  display_ticker_vars.py  models_vars.py  ner_and_clean.py  text_messages.py
Service/functionality/: bot_display_feedback.py  bot_display_ticker.py  bot_get_feedback.py  bot_graph.py  bot_info.py  bot_start.py
Service/functionality/model/: bot_model_buttons.py  bot_model_main.py  scrapers.py
Service/handlers/: bot_display_ticker.py  bot_get_feedback.py  bot_start.py
Service/handlers/model/: bot_model_buttons.py  bot_model_main.py  scrapers.py
Service/utils/: custom_exceptions.py  database.py  display_ticker_vars.py  models.dvc  ner_and_clean.py  text_messages.py  tokenizers.dvc  verification_dict.py
Service/utils/tokenizers/: comp_tokenizer.json  glob_moex_tokenizer.json
Services/: docker-compose.yml  prometheus.yml
Services/Service-bot/: .env  Dockerfile  config_reader.py  docker-compose.yml
Services/Service-bot/handlers/: bot_info.py
Services/Service-bot/utils/: ner_and_clean.py  text_messages.py
Services/api/: .coveragerc  .env.example  Dockerfile  Makefile  pyproject.toml  setup.cfg
Services/api/artifacts/: tokenizers.dvc
Services/api/frontend/: nginx.conf
Services/api/scripts/: app.sh  celery.sh
Services/api/src/: config.py  logging_setup.py  main.py
Services/api/src/database/: db.py  router.py
Services/api/src/models_functionality/: __init__.py  inference.py  main_model.py  ner_and_preprocess.py  router.py  scrapers.py  utils.py
Services/api/tests/: README.md  test_models_functionality.py
Services/api/tests/data/: test_links.csv  test_texts.csv
Services/bot/: .coverage  .coveragerc  .env  .env.example  Dockerfile  Makefile  alembic.ini  config_reader.py  logging_setup.py  main.py  pyproject.toml  setup.cfg
Services/bot/coverage_report/: .gitignore  __init___py.html  config_reader_py.html  d_1f4cdc73c39a6604___init___py.html  d_1f4cdc73c39a6604_base_py.html  d_1f4cdc73c39a6604_models_py.html  d_1f4cdc73c39a6604_requests_py.html  d_38eee356c86ce489_e5865326dea4_initial_migration_py.html  d_ada0b7622bb76289___init___py.html  d_ada0b7622bb76289_bot_display_feedback_py.html  d_ada0b7622bb76289_bot_display_ticker_py.html  d_ada0b7622bb76289_bot_get_feedback_py.html  d_ada0b7622bb76289_bot_graph_py.html  d_ada0b7622bb76289_bot_info_py.html  d_ada0b7622bb76289_bot_start_py.html  d_bc87bb583530929d_env_py.html  d_c810615cce0f7acb___init___py.html  d_c810615cce0f7acb_display_ticker_vars_py.html  d_c810615cce0f7acb_text_messages_py.html  d_c810615cce0f7acb_verification_dict_py.html  d_e43d5305cc4dfff8___init___py.html  d_e43d5305cc4dfff8_bot_model_buttons_py.html  d_e43d5305cc4dfff8_bot_model_main_py.html  d_ea10be70f3c99559___init___py.html  d_ea10be70f3c99559_db_py.html  index.html  status.json  style.css
Services/bot/db/: __init__.py  base.py  models.py  requests.py
Services/bot/handlers/: .coverage  __init__.py  bot_display_feedback.py  bot_display_ticker.py  bot_get_feedback.py  bot_graph.py  bot_info.py  bot_start.py
Services/bot/tests/: README.md  conftest.py  mocked_aiogram.py  test_bot_display_feedback.py  test_bot_display_ticker.py  test_bot_get_feedback.py  test_bot_graph.py  test_bot_info.py  (+3 more)
Services/filebeat/: Dockerfile  filebeat.yml
Services/streamlit/: main.py  requirements.txt  text_messages.py  utils.py
(+12 files in other folders)
