[tool.poetry]
name = "project-news-graph"
version = "0.1.0"
description = ""
authors = ["FlameInBrainSerj <Krivosheev.sergey.01@mail.ru>"]
readme = "README.md"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
absl-py = "2.0.0"
aiofiles = "23.2.1"
aiogram = "3.2.0"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
astunparse = "1.6.3"
async-timeout = "4.0.3"
attrs = "23.2.0"
build = "1.0.3"
cachecontrol = "0.13.1"
cachetools = "5.3.2"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
crashtest = "0.4.1"
dawg-python = "0.7.2"
distlib = "0.3.8"
docopt = "0.6.2"
dulwich = "0.21.7"
emoji = "2.9.0"
exceptiongroup = "1.2.0"
fastjsonschema = "2.19.1"
filelock = "3.12.2"
flatbuffers = "23.5.26"
frozenlist = "1.4.1"
fsspec = "2023.4.0"
gast = "0.4.0"
google-auth = "2.26.1"
google-auth-oauthlib = "1.0.0"
google-pasta = "0.2.0"
grpcio = "1.60.0"
gunicorn = "21.2.0"
h11 = "0.14.0"
h5py = "3.10.0"
idna = "3.6"
importlib-metadata = "7.0.1"
installer = "0.7.0"
intervaltree = "3.1.0"
ipymarkup = "0.9.0"
jaraco-classes = "3.3.0"
jinja2 = "3.1.2"
joblib = "1.3.2"
keyring = "24.3.0"
libclang = "16.0.6"
magic-filter = "1.0.12"
markdown = "3.5.1"
markupsafe = "2.1.3"
ml-dtypes = "0.2.0"
more-itertools = "10.2.0"
mpmath = "1.3.0"
msgpack = "1.0.7"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
natasha = "1.6.0"
navec = "0.10.0"
networkx = "3.2.1"
nltk = "3.8.1"
numpy = "1.26.0"
oauthlib = "3.2.2"
opt-einsum = "3.3.0"
outcome = "1.3.0.post0"
packaging = "23.2"
pandas = "2.1.4"
pathlib = "1.0.1"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "10.2.0"
pkginfo = "1.9.6"
platformdirs = "3.9.1"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
protobuf = "4.23.4"
psycopg2 = "2.9.9"
ptyprocess = "0.7.0"
pyasn1 = "0.5.1"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
pydantic-core = "2.14.6"
pymorphy2 = "0.9.1"
pymorphy2-dicts-ru = "2.4.417127.4579844"
pyproject-hooks = "1.0.0"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
pywin32-ctypes = "0.2.2"
rapidfuzz = "3.6.1"
razdel = "0.5.0"
regex = "2023.12.25"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
requests-toolbelt = "1.0.0"
rsa = "4.9"
selenium = "4.16.0"
shellingham = "1.5.4"
six = "1.16.0"
slovnet = "0.6.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
sympy = "1.12"
termcolor = "2.4.0"
tomli = "2.0.1"
tomlkit = "0.12.3"
torch = "2.2.0+cpu"
torchaudio = "2.2.0+cpu"
torchdata = "0.7.1"
torchtext = "0.17.0"
torchvision = "0.17.0+cpu"
tqdm = "4.66.1"
trio = "0.23.2"
trio-websocket = "0.11.1"
trove-classifiers = "2024.1.31"
typeguard = "2.13.3"
typing-extensions = "4.8.0"
tzdata = "2023.4"
urllib3 = "2.1.0"
uvicorn = "0.25.0"
virtualenv = "20.25.0"
werkzeug = "3.0.1"
wrapt = "1.14.1"
wsproto = "1.2.0"
yargy = "0.16.0"
yarl = "1.9.4"
zipp = "3.17.0"
types-psycopg2 = "^2.9.21.20240201"
types-pytz = "^2024.1.0.20240203"
types-requests = "^2.31.0.20240125"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
flake8-bugbear = "^24.1.17"
flake8-builtins = "^2.2.0"
pep8-naming = "^0.13.3"
flake8-commas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
